Added tests for message handler and generator